--- a/model_deployment.ipynb
+++ b/model_deployment.ipynb
@@ -30,7 +30,7 @@
     }
    ],
    "source": [
-    "model = tf.keras.models.load_model(r\"C:\\Users\\ASUS\\Desktop\\projects\\potato\\training\\modele15.h5\")"
+    "model = tf.keras.models.load_model(r\"modele15.h5\")"
    ]
   },
   {
@@ -59,7 +59,7 @@
    ],
    "source": [
     "\n",
-    "image_path = (r\"C:\\Users\\ASUS\\Desktop\\projects\\potato\\training\\PlantVillage\\Potato___healthy\\00fc2ee5-729f-4757-8aeb-65c3355874f2___RS_HL 1864.JPG\")  \n",
+    "image_path = (r\"image_path\")  \n",
     "image = Image.open(image_path)\n",
     "image = np.array(image)\n",
     "class_names=['Potato___Early_blight', 'Potato___Late_blight', 'Potato___healthy']\n",
